BGE Crash with group instanced curve objects #45817

Closed
opened 2015-08-16 18:04:53 +02:00 by Karja Krähwald · 6 comments

System Information
Windows 7 64, GTX 980

Blender Version
Broken: c27589e + 19cc75d

Short description of error
Blender Game Engine:
Group Instances that contain a curve object instantly crash the BGE on start (P).

Exact steps for others to reproduce the error
BGEGroupInstanceBug.blend

Steps:

  • Add any curve object.
    • Give it a new group (Ctrl-G).
  • Add this group as a group instance to the scene.
  • Start the Game Engine.

Problem: I get a crash with this setup right after hitting P.
Curve objects themselves dont cause any problems, but curve objects that are part of a group instance suffer from this bug.

**System Information** Windows 7 64, GTX 980 **Blender Version** Broken: c27589e + 19cc75d **Short description of error** Blender Game Engine: Group Instances that contain a curve object instantly crash the BGE on start (P). **Exact steps for others to reproduce the error** [BGEGroupInstanceBug.blend](https://archive.blender.org/developer/F224715/BGEGroupInstanceBug.blend) Steps: - Add any curve object. - Give it a new group (Ctrl-G). - Add this group as a group instance to the scene. - Start the Game Engine. Problem: I get a crash with this setup right after hitting P. Curve objects themselves dont cause any problems, but curve objects that are part of a group instance suffer from this bug.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja

Added subscriber: @AdriansNetlis

Added subscriber: @AdriansNetlis

OK! I was able to reproduce the bug and TristanPorteries reccomended me to fix this. I will see what I can do:)

OK! I was able to reproduce the bug and TristanPorteries reccomended me to fix this. I will see what I can do:)

This issue was referenced by ad43262fdb

This issue was referenced by ad43262fdb6ac6f0cc01a56c1316912f3018d788

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45817
No description provided.