BGE: Fix T45817 Convert curve object in group instance.

Now group instance conversion allow unconverted object like curve, meta ball ect…